--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     <!-- Name & Title -->
     <h1 class="center-heading">Jaswinder Kaur (Jazz)</h1>
-    <h2 class="sub-heading">Full Stack Web Developer & Wellness Instructor</h2>
-    <p class="location">Calgary, AB</p>
+    <h4 class="sub-heading">Full Stack Web Developer & Wellness Instructor</h4>
+    <h6 class="location">Calgary, AB</h6>
 
     <!-- Social + Resume in One Line -->
     <div class="d-flex justify-content-center align-items-center gap-4 mt-3">
@@ -33,36 +33,40 @@
   </header>
 
   <!-- About Me Section -->
-  <section id="about" class="section-block text-center">
-    <h2 class="section-title">About Me</h2>
-    <p></p>
-      <b>I am a Full‑Stack Web Developer with 8+ years of IT and product delivery experience, now focused on building secure, user‑centered web applications. I blend hands‑on systems and support experience with practical development skills in React, Python, SQL, and Firebase, applying agile product practices to deliver maintainable, business‑aligned solutions. I’m also a certified Yoga Teacher and Laughter Leader, bringing mindfulness, breathwork, and play into teams to boost focus, resilience, and collaboration.
+  <section id="about" class="section-block text-center ">
+    <h2 class="section-title"><u>About Me</u></h2>
+    <p class="about-text">
+      I am a <em>Full‑Stack Web Developer</em>with 8+ years of IT and product delivery experience, now focused on building secure, user‑centered web applications. I blend hands‑on systems and support experience with practical development skills in React, Python, SQL, and Firebase, applying agile product practices to deliver maintainable, <em>business‑aligned solutions</em>. I’m also a certified Yoga Teacher and Laughter Leader, bringing mindfulness, breathwork, and play into teams to boost focus, resilience, and collaboration.
     </p>
   </section>
 
-  <!-- Skills Section -->
+  <!-- Technical Skills Section -->
   <section id="skills" class="section-block text-center bg-light">
-    <h2 class="section-title">Skills</h2>
-    <ul class="list-unstyled">
-      <li>HTML, CSS, Bootstrap</li>
-      <li>React, SQL, Firebase</li>
-      <li>Agile & Scrum</li>
-    </ul>
+    <h2 class="section-title"><u>Technical Skills</u></h2>
+    <dl>
+                <dt><b>Programming Languages:</b> SQL, Python, React, PowerShell Scripting, Python, Figma, HTML, CSS, Bootstrap, JavaScript, jQuery</dt>
+                <dt><b>Operating Systems: </b> Windows, Android, iOS, Mac OS, Linux </dt>
+                <dt><b>Security Tools:</b> Cloud Apps, Purview, Endpoint, Identity, Microsoft Sentinel  </dt>
+                <dt><b>Applications & Tools: </b> Microsoft Excel, Azure Sandbox, Git, Firebase, Cypress End-to-End, Testing, and Power Platform</dt>
+                <dt><b>Project Management:</b> Jira, Agile, Waterfall, Scrum, Kanban, Trello  </dt>
+                <dt><b>AI Fundamentals:</b> Prompt Engineering & Output Evaluation, Creating responsible    generative AI, solutions, Microsoft Security Copilot (Copilot in Defender XDR, Purview, Entra, Intune and Cloud)</dt>
+
+    </dl>
   </section>
 
   <!-- Projects Section -->
   <section id="projects" class="section-block text-center">
-    <h2 class="section-title mb-4">Projects</h2>
+    <h2 class="section-title mb-4"><u>Projects</u></h2>
     <div class="row justify-content-center">
       <!-- Project 1 -->
       <div class="col-md-4 mb-3">
         <div class="card shadow-sm">
           <a href="https://github.com/yourusername/portfolio" target="_blank">
-            <img src="images/project1.png" class="card-img-top" alt="Portfolio Website">
+            <img src="Scratch.png" class="card-img-top project-img" alt="Portfolio Website">
           </a>
           <div class="card-body">
-            <h4 class="card-title">Portfolio Website</h4>
-            <p class="card-text">A responsive personal portfolio built with HTML, CSS, and Bootstrap.</p>
+            <h4 class="card-title">Wellness Game</h4>
+            <p class="card-text">An interactive Scratch game designed to promote mindfulness, positivity, and wellness through playful engagement.</p>
             <a href="https://github.com/yourusername/portfolio" target="_blank" class="btn btn-outline-primary btn-sm">View Project</a>
           </div>
         </div>
@@ -71,7 +75,7 @@
       <div class="col-md-4 mb-3">
         <div class="card shadow-sm">
           <a href="https://www.figma.com/proto/kte1lT28MarzFbg8rxH0ay/The-Gentle-Space?node-id=1-2&p=f&t=pPdOwkZuLXalJw79-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A2 target="_blank">
-            <img src="Figma icon.png" class="card-img-top" alt="Figma Website">
+            <img src="Figma icon.png" class="card-img-top project-img" alt="Figma Website">
           </a>
           <div class="card-body">
             <h4 class="card-title">React App</h4>
@@ -84,11 +88,11 @@
       <div class="col-md-4 mb-3">
         <div class="card shadow-sm">
           <a href="https://github.com/yourusername/ai-chatbot" target="_blank">
-            <img src="images/project3.png" class="card-img-top" alt="AI Chatbot">
+            <img src="HTML CSS.png" class="card-img-top project-img" alt="HTML/CSS Website">
           </a>
           <div class="card-body">
-            <h4 class="card-title">AI Chatbot</h4>
-            <p class="card-text">An AI-powered chatbot for customer support, built with Python and APIs.</p>
+            <h4 class="card-title">Portfolio Website</h4>
+            <p class="card-text">A responsive personal portfolio built with HTML, CSS, and Bootstrap.</p>
             <a href="https://github.com/yourusername/ai-chatbot" target="_blank" class="btn btn-outline-warning btn-sm">View Project</a>
           </div>
         </div>
@@ -98,7 +102,7 @@
 
   <!-- Services Section -->
   <section id="services" class="section-block text-center bg-light">
-    <h2 class="section-title mb-4">My Services</h2>
+    <h2 class="section-title mb-4"><u>My Services</u></h2>
     <div class="row justify-content-center">
       <div class="col-md-4 mb-3">
         <div class="card service-card bg-primary text-white shadow-sm p-3">
