--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 
     <!-- Name & Title -->
     <h1 class="center-heading">Jaswinder Kaur (Jazz)</h1>
-    <h4 class="sub-heading">Full Stack Web Developer & Wellness Instructor</h4>
+    <h5 class="sub-heading">Full Stack Web Developer & Wellness Instructor</h5>
     <h6 class="location">Calgary, AB</h6>
 
     <!-- Social + Resume in One Line -->
     <div class="d-flex justify-content-center align-items-center gap-4 mt-3">
       <a href="https://www.linkedin.com/in/jk515/" target="_blank">
-        <img src="linkedin.png" alt="LinkedIn" width="40">
+        <img src="linkedin-icon.png" alt="LinkedIn" width="35">
       </a>
-      <a href="https://github.com/Jazz0701/Jazz-s-Portfolio" target="_blank">
-        <img src="github.png" alt="GitHub" width="40">
+      <a href="https://github.com/Jazz0701" target="_blank">
+        <img src="github-icon.png" alt="GitHub" width="35">
       </a>
       <a href="JaswinderKaur_Resume.pdf" class="btn btn-primary" target="_blank">Download Resume</a>
     </div>
@@ -61,13 +61,13 @@
       <!-- Project 1 -->
       <div class="col-md-4 mb-3">
         <div class="card shadow-sm">
-          <a href="https://github.com/yourusername/portfolio" target="_blank">
+          <a href="https://scratch.mit.edu/projects/1237878237/fullscreen/" target="_blank">
             <img src="Scratch.png" class="card-img-top project-img" alt="Portfolio Website">
           </a>
           <div class="card-body">
             <h4 class="card-title">Wellness Game</h4>
-            <p class="card-text">An interactive Scratch game designed to promote mindfulness, positivity, and wellness through playful engagement.</p>
-            <a href="https://github.com/yourusername/portfolio" target="_blank" class="btn btn-outline-primary btn-sm">View Project</a>
+            <p class="card-text">A Scratch game promoting mindfulness and wellness.</p>
+            <a href="https://scratch.mit.edu/projects/1237878237/fullscreen/" target="_blank" class="btn btn-outline-primary btn-sm">View Project</a>
           </div>
         </div>
       </div>
@@ -78,22 +78,22 @@
             <img src="Figma icon.png" class="card-img-top project-img" alt="Figma Website">
           </a>
           <div class="card-body">
-            <h4 class="card-title">React App</h4>
-            <p class="card-text">A dynamic web application showcasing React components and Firebase integration.</p>
-            <a href="https://github.com/yourusername/react-app" target="_blank" class="btn btn-outline-success btn-sm">View Project</a>
+            <h4 class="card-title">Website UI Design</h4>
+            <p class="card-text">A responsive website UI designed using Figma.</p>
+            <a href="https://www.figma.com/proto/kte1lT28MarzFbg8rxH0ay/The-Gentle-Space?node-id=1-2&p=f&t=pPdOwkZuLXalJw79-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A2" target="_blank" class="btn btn-outline-success btn-sm">View Project</a>
           </div>
         </div>
       </div>
       <!-- Project 3 -->
       <div class="col-md-4 mb-3">
         <div class="card shadow-sm">
-          <a href="https://github.com/yourusername/ai-chatbot" target="_blank">
+          <a href="https://jazz0701.github.io/Jazz-s-Portfolio/" target="_blank">
             <img src="HTML CSS.png" class="card-img-top project-img" alt="HTML/CSS Website">
           </a>
           <div class="card-body">
             <h4 class="card-title">Portfolio Website</h4>
-            <p class="card-text">A responsive personal portfolio built with HTML, CSS, and Bootstrap.</p>
-            <a href="https://github.com/yourusername/ai-chatbot" target="_blank" class="btn btn-outline-warning btn-sm">View Project</a>
+            <p class="card-text">A responsive personal portfolio built with HTML and CSS.</p>
+            <a href="https://jazz0701.github.io/Jazz-s-Portfolio/" target="_blank" class="btn btn-outline-warning btn-sm">View Project</a>
           </div>
         </div>
       </div>
@@ -107,26 +107,28 @@
       <div class="col-md-4 mb-3">
         <div class="card service-card bg-primary text-white shadow-sm p-3">
           <h4>Web Development</h4>
-          <p>Responsive websites using HTML, CSS, Bootstrap, and React.</p>
+          <p>Build responsive, user-friendly websites using HTML, CSS, Bootstrap, and React, focused on clean design, accessibility, and modern front-end best practices.</p>
         </div>
       </div>
       <div class="col-md-4 mb-3">
         <div class="card service-card bg-success text-white shadow-sm p-3">
           <h4>Technical Writing</h4>
-          <p>Clear documentation, guides, and blogs tailored for tech and wellness.</p>
+          <p>Create clear and concise user guides, and feature descriptions. Focused on readability, accuracy, and developer-friendly communication.</p>
         </div>
       </div>
       <div class="col-md-4 mb-3">
         <div class="card service-card bg-warning text-dark shadow-sm p-3">
-          <h4>Wellness Leadership</h4>
-          <p>Yoga and laughter sessions to inspire balance and creativity.</p>
+          <h4>Wellness Instructor</h4>
+          <p>Guided sessions in laughter yoga and meditation to promote relaxation and joy. Techniques designed to reduce stress, boost positivity, and improve well-being.</p>
         </div>
       </div>
     </div>
   </section>
 
+  <h4 class="title" style="text-align:center">You can connect with me at: <a href="mailto:jaswinderknanda@outlook.com">jaswinderknanda@outlook.com</a></h4>
+
   <!-- Footer -->
-  <footer>
+  <footer class="footer">
     <p>&copy; 2025 Jaswinder Kaur | Portfolio</p>
   </footer>
 
