--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <h4 class="title" style="text-align:center">You can connect with me at: <a href="mailto:jaswinderknanda@outlook.com">jaswinderknanda@outlook.com</a></h4>
 
   <!-- Footer -->
-  <footer class="footer">
+  <footer class="footer text-center">
     <p>&copy; 2025 Jaswinder Kaur | Portfolio</p>
   </footer>
 
