--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section id="about" class="section-block text-center ">
     <h2 class="section-title"><u>About Me</u></h2>
     <p class="about-text">
-      I am a <em>Full‑Stack Web Developer</em>with 8+ years of IT and product delivery experience, now focused on building secure, user‑centered web applications. I blend hands‑on systems and support experience with practical development skills in React, Python, SQL, and Firebase, applying agile product practices to deliver maintainable, <em>business‑aligned solutions</em>. I’m also a certified Yoga Teacher and Laughter Leader, bringing mindfulness, breathwork, and play into teams to boost focus, resilience, and collaboration.
+      I am a <em>Full‑Stack Web Developer </em>with 8+ years of IT and product delivery experience, now focused on building secure, user‑centered web applications. I blend hands‑on systems and support experience with practical development skills in React, Python, SQL, and Firebase, applying agile product practices to deliver maintainable, <em>business‑aligned solutions</em>. I’m also a certified Yoga Teacher and Laughter Leader, bringing mindfulness, breathwork, and play into teams to boost focus, resilience, and collaboration.
     </p>
   </section>
 
@@ -128,7 +128,8 @@
   <h4 class="title" style="text-align:center">You can connect with me at: <a href="mailto:jaswinderknanda@outlook.com">jaswinderknanda@outlook.com</a></h4>
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer class="footer 
+  text-center">
     <p>&copy; 2025 Jaswinder Kaur | Portfolio</p>
   </footer>
 
