--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </section>
 
-  <h4 class="title" style="text-align:center"><em>You can connect with me at:</h4>em> <a href="mailto:jaswinderknanda@outlook.com"><em>jaswinderknanda@outlook.com</em>em></a></h4>
+  <h4 class="title" style="text-align:center">You can connect with me at: <a href="mailto:jaswinderknanda@outlook.com">jaswinderknanda@outlook.com</a></h4>
 
   <!-- Footer -->
   <footer class="footer 
