--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">Wellness Game</h4>
-            <p class="card-text">A Scratch game promoting mindfulness and wellness.</p>
+            <p class="card-text"><em>A Scratch game promoting mindfulness and wellness.</em></p>
             <a href="https://scratch.mit.edu/projects/1237878237/fullscreen/" target="_blank" class="btn btn-outline-primary btn-sm">View Project</a>
           </div>
         </div>
@@ -79,7 +79,7 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">Website UI Design</h4>
-            <p class="card-text">A responsive website UI designed using Figma.</p>
+            <p class="card-text"><em>A responsive website UI designed using Figma.</em></p>
             <a href="https://www.figma.com/proto/kte1lT28MarzFbg8rxH0ay/The-Gentle-Space?node-id=1-2&p=f&t=pPdOwkZuLXalJw79-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A2" target="_blank" class="btn btn-outline-success btn-sm">View Project</a>
           </div>
         </div>
@@ -92,7 +92,7 @@
           </a>
           <div class="card-body">
             <h4 class="card-title">Portfolio Website</h4>
-            <p class="card-text">A responsive personal portfolio built with HTML and CSS.</p>
+            <p class="card-text"><em>A responsive personal portfolio built with HTML and CSS.</em></p>
             <a href="https://jazz0701.github.io/Jazz-s-Portfolio/" target="_blank" class="btn btn-outline-warning btn-sm">View Project</a>
           </div>
         </div>
