--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
       <div class="col-md-4 mb-3">
         <div class="card service-card bg-primary text-white shadow-sm p-3">
           <h4>Web Development</h4>
-          <p>Build responsive, user-friendly websites using HTML, CSS, Bootstrap, and React, focused on clean design, accessibility, and modern front-end best practices.</p>
+          <p><em>Build responsive, user-friendly websites using HTML, CSS, Bootstrap, and React, focused on clean design, accessibility, and modern front-end best practices.</em></p>
         </div>
       </div>
       <div class="col-md-4 mb-3">
         <div class="card service-card bg-success text-white shadow-sm p-3">
           <h4>Technical Writing</h4>
-          <p>Create clear and concise user guides, and feature descriptions. Focused on readability, accuracy, and developer-friendly communication.</p>
+          <p><em>Create clear and concise user guides, and feature descriptions. Focused on readability, accuracy, and developer-friendly communication.<em></p>
         </div>
       </div>
       <div class="col-md-4 mb-3">
         <div class="card service-card bg-warning text-dark shadow-sm p-3">
           <h4>Wellness Instructor</h4>
-          <p>Guided sessions in laughter yoga and meditation to promote relaxation and joy. Techniques designed to reduce stress, boost positivity, and improve well-being.</p>
+          <p><em>Guided sessions in laughter yoga and meditation to promote relaxation and joy. Techniques designed to reduce stress, boost positivity, and improve well-being.</em></p>
         </div>
       </div>
     </div>
