--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Name & Title -->
     <h1 class="center-heading">Jaswinder Kaur (Jazz)</h1>
-    <h5 class="sub-heading">Full Stack Web Developer & Wellness Instructor</h5>
+    <h5 class="sub-heading">AI Specialist | Certified Product Owner/Manager | Full Stack Developer </h5>
     <h6 class="location">Calgary, AB</h6>
 
     <!-- Social + Resume in One Line -->
@@ -36,7 +36,7 @@
   <section id="about" class="section-block text-center ">
     <h3 class="section-title"><u>About Me</u></h3>
     <p class="about-text">
-      I am a <em>Full‑Stack Web Developer </em>with 8+ years of IT and product delivery experience, now focused on building secure, user‑centered web applications. I blend hands‑on systems and support experience with practical development skills in React, Python, SQL, and Firebase, applying agile product practices to deliver maintainable, <em>business‑aligned solutions</em>. I’m also a certified Yoga Teacher and Laughter Leader, bringing mindfulness, breathwork, and play into teams to boost focus, resilience, and collaboration.
+      As an experienced IT Coordinator and certified Scrum Master/Product Owner, Jaswinder Kaur operates at the intersection of technology and business results. She brings a robust history of managing IT infrastructure and performing complex data analysis, backed by over eight years of experience. She is focused on applying this strategic, agile mindset to Full Stack Web Development, aiming to deliver secure, cohesive, and business-aligned software solutions. . I blend hands‑on systems and support experience with practical development skills in React, Python, SQL, and Firebase, applying agile product practices to deliver maintainable, <em>business‑aligned solutions</em>. I’m also a certified Yoga Teacher and Laughter Leader, bringing mindfulness, breathwork, and play into teams to boost focus, resilience, and collaboration.
     </p>
   </section>
 
